💄 🎨  adds header strcuture and stying

--- a/src/app/components/layouts/header/header.component.html
+++ b/src/app/components/layouts/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<header class="navbar navbar-extend-lg fixed-top bg-white">
+  <div class="container justify-content-center">
+    <a href="#" class="site-logo">DLOGGER</a>
+  </div>
+</header>
