--- a/src/app/components/subscription-form/subscription-form.component.html
+++ b/src/app/components/subscription-form/subscription-form.component.html
@@ -1,1 +1,27 @@
-<p>subscription-form works!</p>
+<div class="card shadow-effect">
+  <div class="card-body">
+    <div class="text-center mt-3 mb-5">
+      <h3>SUBSCRIPTION FORM</h3>
+      <p class="m-auto subs-text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, ea
+        natus accusamus velit recusandae animi ex distinctio ab mollitia.
+        Praesentium.
+      </p>
+      <form action="" class="form-inline mt-3">
+        <div class="form-group col-md-5">
+          <input type="text" class="form-control shadow-effect" placeholder="Your Name"/>
+        </div>
+        <div class="form-group col-md-5">
+          <input
+            type="email"
+            class="form-control shadow-effect"
+            placeholder="Email Address"
+          />
+        </div>
+        <div class="col-md-2">
+          <button class="btn btn-info btn-sub">SUBSCRIBE</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
