--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,3 +28,6 @@ body {
   border: none !important;
   box-shadow: 0px 0px 33px -10px rgb(71, 114, 254, 0.4);
 }
+.bg-theme{
+  background-color: var(--primary-color);
+}
