--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,28 @@ body {
   border: none !important;
   box-shadow: 0px 0px 33px -10px rgb(71, 114, 254, 0.4);
 }
-.bg-theme{
+.bg-theme {
   background-color: var(--primary-color);
+}
+.bg-secondary-theme{
+  background-color: var(--secondary-color);
+}
+.text-theme-primary{
+  color: var(--primary-color);
+}
+input {
+  height: 60px;
+  padding-left: 20px;
+  font-size: 14px;
+}
+.btn-theme {
+  height: 58px;
+  border: none;
+  font-size: 14px;
+  background-color: var(--primary-color) !important;
+  color: white !important;
+}
+
+.opacity-7{
+  opacity: 0.7;
 }
