🎨 adds about us page structure

--- a/src/app/components/pages/about-us/about-us.component.html
+++ b/src/app/components/pages/about-us/about-us.component.html
@@ -1,1 +1,41 @@
-<p>about-us works!</p>
+<section class="mt-5">
+  <div class="container mt-5 mb-5 p-5 bg-theme">
+    <h1 class="text-white text-center">About Us</h1>
+
+    <div class="p-5 mt-4 bg-secondary-theme text-theme-primary">
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam
+        quibusdam reiciendis soluta quidem odio qui similique laudantium
+        inventore nisi earum ab corrupti natus ratione obcaecati, dolorum at
+        voluptatem debitis recusandae nesciunt, corporis quos mollitia
+        voluptatum! Enim cupiditate culpa minus aliquid dignissimos harum
+        voluptas consectetur dolor obcaecati, quo maxime tenetur vero soluta
+        corporis necessitatibus vel! Aperiam, repudiandae quasi! Neque, debitis!
+        Hic.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam
+        quibusdam reiciendis soluta quidem odio qui similique laudantium
+        inventore nisi earum ab corrupti natus ratione obcaecati, dolorum at
+        voluptatem debitis recusandae nesciunt, corporis quos mollitia
+        voluptatum! Enim cupiditate culpa minus aliquid dignissimos harum
+        voluptas consectetur dolor obcaecati, quo maxime tenetur vero soluta
+        corporis necessitatibus vel! Aperiam, repudiandae quasi! Neque, debitis!
+        Hic.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam
+        quibusdam reiciendis soluta quidem odio qui similique laudantium
+        inventore nisi earum ab corrupti natus ratione obcaecati, dolorum at
+        voluptatem debitis recusandae nesciunt, corporis quos mollitia
+        voluptatum! Enim cupiditate culpa minus aliquid dignissimos harum
+        voluptas consectetur dolor obcaecati, quo maxime tenetur vero soluta
+        corporis necessitatibus vel! Aperiam, repudiandae quasi! Neque, debitis!
+        Hic.
+      </p>
+      <div class="text-center">
+        <button class="btn btn-info btn-sm mt-4 btn-theme">Back to Home</button>
+      </div>
+    </div>
+  </div>
+</section>
