🎨 adds single post structure

--- a/src/app/components/pages/comments/comments-form/comments-form.component.html
+++ b/src/app/components/pages/comments/comments-form/comments-form.component.html
@@ -1,1 +1,24 @@
-<p>comments-form works!</p>
+<div class="card mt-5 shadow-effect">
+  <div class="card-body">
+
+    <h4>Leave a Comment</h4>
+    <p class="opacity-7">You can leave a comment using this comment form</p>
+
+    <form >
+
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" class="form-control shadow-effect mt-2 mb-2" placeholder="Enter your name here">
+      </div>
+
+      <div class="form-group">
+        <label for="comment">Comment</label>
+        <textarea name="" id="" cols="30" rows="10" class="form-control shadow-effect mt-2 mb-2" placeholder="Add your comment here"></textarea>
+      </div>
+
+      <button class="btn btn-info btn-theme mt-2">Add a comment</button>
+
+    </form>
+
+  </div>
+</div>
