--- a/src/app/components/pages/single-post/single-post.component.html
+++ b/src/app/components/pages/single-post/single-post.component.html
@@ -1,1 +1,73 @@
-<p>single-post works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-9">
+      <div class="card shadow-effect">
+        <img
+          src="https://images.pexels.com/photos/2422461/pexels-photo-2422461.jpeg?auto=compress&cs=tinysrgb&w=600"
+          alt=""
+        />
+
+        <div class="card-body">
+          <small class="bg-light text-danger text-center"> Design </small>
+          <small class="bg-light text-success text-center ms-2">
+            Featured
+          </small>
+          <small class="bg-light text-info text-center ms-2">
+            Views - 101,246
+          </small>
+          <small class="bg-light text-warning text-center ms-2">
+            LAST UPDATED - MAR 19, 2023
+          </small>
+
+          <h1 class="mt-3 mb-3">HOW TO START A BLOG IN 2023</h1>
+
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Perspiciatis cumque, enim quia, labore nihil quae odit, expedita
+            neque officiis rem quo aperiam omnis accusamus necessitatibus? Nemo
+            eos earum voluptas illum laboriosam nulla eius mollitia, voluptate
+            rem vero, dolor reiciendis corrupti modi a harum vel velit
+            voluptatibus natus, error ducimus aliquid laudantium impedit dolores
+            eum. Totam, mollitia. Optio facere quas odit! Repellendus doloremque
+            voluptas minus, sunt sequi optio eaque excepturi beatae fugit
+            mollitia facere quasi esse dolor labore dignissimos deleniti ad
+            aperiam error pariatur impedit sint consequatur aspernatur
+            temporibus! Earum qui, quos iusto quo culpa suscipit voluptatum.
+            Corporis, quia! Quod maxime reiciendis beatae, magnam dolores
+            accusantium minus cum dolorum debitis aliquid aliquam autem in sequi
+            ab doloremque expedita voluptates explicabo voluptatibus, recusandae
+            dolor et minima consequatur. Ullam corrupti aspernatur consequatur
+            nam accusamus esse at culpa? Modi autem repudiandae reiciendis
+            architecto quod atque nisi officia, voluptates veniam ad animi
+            mollitia officiis a, neque at. Magnam voluptates natus pariatur
+            reiciendis voluptatibus sequi itaque totam nam! Quod harum nulla
+            porro explicabo quis sequi alias quos, placeat officiis ducimus!
+            Temporibus nulla amet asperiores consequatur. Laudantium dolorum
+            voluptatum dignissimos ducimus, mollitia culpa delectus sed iure,
+            nihil adipisci consequatur sapiente, placeat commodi sit sint nobis?
+            Saepe voluptatum tempora ratione quos amet, a dignissimos autem!
+            Libero fugit aspernatur quia nobis tempora a est quod, provident
+            eius! Velit quia fugiat perspiciatis dolorum recusandae incidunt
+            accusantium voluptatum molestias, maiores asperiores ullam, eos
+            dignissimos quisquam necessitatibus commodi amet aspernatur corporis
+            labore iusto neque itaque repellendus? Itaque repellat facere
+            dolorum nostrum cumque repudiandae eius iusto cupiditate, asperiores
+            obcaecati error quos quaerat laboriosam tempore nulla rerum
+            repellendus ipsum natus voluptatem quisquam? Beatae eum sequi
+            laboriosam sed quo deserunt et nisi, a praesentium facere voluptate
+            dicta animi distinctio odit ipsa in enim molestias dignissimos
+            voluptatem laborum libero suscipit ab non! Dignissimos sapiente
+            exercitationem eius?
+          </p>
+        </div>
+      </div>
+      <app-comments-form></app-comments-form>
+      <app-comments-list></app-comments-list>
+    </div>
+    <div class="col-md-3">
+      <app-post-card></app-post-card>
+      <app-post-card></app-post-card>
+      <app-post-card></app-post-card>
+    </div>
+  </div>
+</div>
