--- a/src/app/components/pages/comments/comments-list/comments-list.component.html
+++ b/src/app/components/pages/comments/comments-list/comments-list.component.html
@@ -1,1 +1,48 @@
-<p>comments-list works!</p>
+<div class="card mb-5 mt-5 pb-5 shadow-effect">
+  <div class="card-body">
+    <h4 class="mt-3 mb-3">Comments (10,325)</h4>
+
+    <div class="comment-box mt-3">
+      <h6 class="mb-0">John Doe</h6>
+      <small class="text-danger">LAST UPDATED MAR 19, 2023</small>
+
+      <div class="mt-3 mb-3">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
+        distinctio, laudantium nam dignissimos incidunt suscipit!
+      </div>
+
+      <a href="#" class="mt-1"> REPLY</a>
+      <a href="#" class="mt-1 ms-3"> VIEW REPLY</a>
+
+      <hr />
+    </div>
+    <div class="comment-box mt-3">
+      <h6 class="mb-0">John Doe</h6>
+      <small class="text-danger">LAST UPDATED MAR 19, 2023</small>
+
+      <div class="mt-3 mb-3">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
+        distinctio, laudantium nam dignissimos incidunt suscipit!
+      </div>
+
+      <a href="#" class="mt-1"> REPLY</a>
+      <a href="#" class="mt-1 ms-3"> VIEW REPLY</a>
+
+      <hr />
+    </div>
+    <div class="comment-box mt-3">
+      <h6 class="mb-0">John Doe</h6>
+      <small class="text-danger">LAST UPDATED MAR 19, 2023</small>
+
+      <div class="mt-3 mb-3">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
+        distinctio, laudantium nam dignissimos incidunt suscipit!
+      </div>
+
+      <a href="#" class="mt-1"> REPLY</a>
+      <a href="#" class="mt-1 ms-3"> VIEW REPLY</a>
+
+      <hr />
+    </div>
+  </div>
+</div>
