--- a/src/app/components/subscription-form/subscription-form.component.html
+++ b/src/app/components/subscription-form/subscription-form.component.html
@@ -19,7 +19,7 @@
           />
         </div>
         <div class="col-md-2">
-          <button class="btn btn-info btn-sub">SUBSCRIBE</button>
+          <button class="btn btn-info btn-sub btn-theme">SUBSCRIBE</button>
         </div>
       </form>
     </div>
